add get endpoints for projects

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
-mongodb_uri= mongodb://localhost:27017/
-mongodb_db_name= task_tracker_db
+mongodb.uri=mongodb://localhost:27017
+mongodb.db.name=task_tracker_db
