add more project endpoints, setup mongoDb repos

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,7 @@
 mongodb.uri=mongodb://localhost:27017
 mongodb.db.name=task_tracker_db
+
+server.port:8080
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=task_tracker_db
