--- a/build.gradle
+++ b/build.gradle
@@ -27,14 +27,16 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.data:spring-data-mongodb:4.2.3'
+	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
-//	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.mockito:mockito-core:5.10.0'
+	testImplementation 'org.springframework.security:spring-security-test'
+//	testImplementation 'org.mockito:mockito-core:5.10.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
 
 }
 
